<resources>
    <string name="app_name">Dits &amp; Dahs</string>
    <string name="action_settings">Settings</string>

    <string name="random_letters_description_what">Learn to copy groups of random characters.</string>
    <string name="random_letters_description_why">During this exercise, you recognize a stream of characters without pausing to check if your guess was correct. This exercise focuses on setting aside inhibition and the anxiety of making mistakes.</string>

    <string name="letter_training_description_what">Listen to a Morse code pattern and guess which character is being played.</string>
    <string name="letter_training_description_why">This exercise introduces the alphabet in Morse code. After each session you can view your accuracy.</string>
    <string name="title_activity_main4">Main4Activity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="tab_text_3">Tab 3</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <string name="setting_transcribe_audio_tone">setting_transcribe_audio_tone</string>
    <string name="setting_transcribe_letter_wpm">setting_transcribe_letter_wpm</string>
    <string name="setting_transcribe_effective_wpm">setting_transcribe_effective_wpm</string>
    <string name="setting_transcribe_duration_minutes">setting_transcribe_duration_minutes</string>
    <string name="setting_transcribe_target_issue_letters">setting_transcribe_target_issue_letters</string>
    <string name="setting_transcribe_start_delay_seconds">setting_transcribe_start_delay_seconds</string>
    <string name="setting_transcribe_end_delay_seconds">setting_transcribe_end_delay_seconds</string>
    <string name="setting_transcribe_end_delay_seconds_max_value">10</string>

    <string name="setting_socratic_easy_mode">setting_socratic_easy_mode</string>
    <string name="setting_socratic_audio_tone">setting_socratic_audio_tone</string>

    <string name="random_words_description_what">Learn to recognize common words heard on the air or practice recognizing call signs</string>
    <string name="random_words_description_why">You know the characters, learn to recognize the sound of common words and quiz yourself on recognizing call signs</string>

    <string name="setting_flashcard_audio_tone">setting_flashcard_audio_tone</string>
    <string name="setting_flashcard_letter_wpm">setting_flashcard_letter_wpm</string>
    <string name="setting_flashcard_effective_wpm">setting_flashcard_effective_wpm</string>
    <string name="setting_flashcard_duration_value">setting_flashcard_duration_value</string>
    <string name="setting_flashcard_target_issues">setting_flashcard_target_issues</string>
    <string name="setting_flashcard_start_delay_seconds">setting_flashcard_start_delay_seconds</string>
    <string name="setting_flashcard_end_delay_seconds">setting_flashcard_end_delay_seconds</string>
    <string name="setting_flashcard_duration_unit">setting_flashcard_duration_unit</string>
    <string name="setting_flashcard_duration_time_minutes">setting_flashcard_duration_time_minutes</string>
    <string name="setting_flashcard_duration_num_cards">setting_flashcard_duration_num_cards</string>
    <string name="letter_training_start_help_description">Choose how fast you want the letters to play and press START. Set the WPM (words per minute) to something like 20 or 25. When you learn to recognize the characters at higher speeds you\'ll have an easier time later in your training.</string>
    <string name="list_view_title"><![CDATA[Dits & Dahs -- A CW Learning Tool]]></string>
    <string name="common_words_flashcard_type">Common Words</string>
    <string name="fcc_call_signs_flashcard_type">FCC Call Signs</string>
    <string name="random_calls_selected_description">Random call signs from the FCC\'s ULS database will be played until the session ends</string>
    <string name="qso_training_description_what">Practice transcribeing a QSO between two stations</string>
    <string name="qso_training_description_why">Listening to a realistic QSO is the best way sharpen your on-air listening skills</string>

    <string name="qso_simulator_start_screen_description">After you press start two stations will begin to start having a CW QSO. Call signs, locations, names, rigs, and other things are randomly generated so you can practice transcribing realistic phrases used on the air. Use the tools in "Additional Settings" to adjust how the QSO sounds.</string>
    <string name="qso_simulator_use_second_station_settings">qso_simulator_use_second_station_settings</string>
    <string name="qso_simulator_second_station_settings_description">Settings that control the responding station</string>
    <string name="second_station_setting_transcribe_audio_tone">second_station_setting_transcribe_audio_tone</string>
    <string name="qso_simulator_seconds_between_station_transmissions">qso_simulator_seconds_between_station_transmissions</string>
    <string name="start_timer_title">Starting in %d...</string>
    <string name="end_timer_title">Ending in %d...</string>
    <string name="press_back_to_end_title">Press \'Back\' to end</string>

    <string name="setting_fade_in_out_percentage">setting_fade_in_out_percentage</string>
    <string name="global_setting_collapse_prosigns">global_setting_collapse_prosigns</string>
    <string name="global_setting_symbols_between_letters">global_setting_symbols_between_letters</string>
    <string name="global_setting_symbols_between_words">global_setting_symbols_between_words</string>
    <string name="setting_socratic_duration_minutes_requested">setting_socratic_duration_minutes_requested</string>
    <string name="setting_socratic_wpm_requested">setting_socratic_wpm_requested</string>
    <string name="global_setting_enabled_prosigns">global_setting_enabled_prosigns</string>
    <string name="setting_socratic_enable_auto_introduce">setting_socratic_enable_auto_introduce</string>
    <string name="setting_socratic_missed_letter_points_removed">setting_socratic_missed_letter_points_removed</string>
    <string name="setting_socratic_correct_letter_points_added">setting_socratic_correct_letter_points_added</string>
    <string name="setting_socratic_include_new_letter_cutoff_score">setting_socratic_include_new_letter_cutoff_score</string>
    <string name="setting_reset_to_defaults">setting_reset_to_defaults</string>
    <string name="global_setting_enable_haptic_feedback">global_setting_enable_haptic_feedback</string>
    <string name="faq_card_title">Frequently Asked Questions/Troubleshooting Guide</string>
</resources>
